# NumPyCpp

./: .gitignore  .gitmodules  CMakeLists.txt  Pipfile  README.md  main.yml  numpycpp-config.cmake
.github/workflows/: ccpp.yml  main.yml
doc/: Doxyfile.in
include/numpycpp/: np_array.h  np_base_iterator.h  np_descr_t.h  np_type_t.h  np_unicode.h
src/: CMakeLists.txt  np_array.cpp  np_array.h  np_base_iterator.h  np_bytes_utils.cpp  np_bytes_utils.h  np_descr_t.cpp  np_descr_t.h  np_error.h  np_shape_t.cpp  np_shape_t.h  np_type_t.cpp  np_type_t.h  np_unicode.cpp  numpycpp.cpp  numpycpp.h
test/: CMakeLists.txt  gen_test_files.py  global.cpp  global.h  main.cpp  open_file_test.py  string_test.py  test_array.cpp  test_c_vs_stream.cpp  test_descr_t.cpp  test_f16_error.cpp  test_npz.cpp  test_type_t.cpp  test_types.cpp
test/files/: numpy-good.npz  numpy-good.npz_new  numpy-types.npz
test/files/numpy-types/: bool.npy  bool.npy_test  float16.npy  float32.npy  float64.npy  int16.npy  int32.npy  int64.npy  int8.npy  uint16.npy  uint16.npy_test  uint32.npy  uint64.npy  uint8.npy
